Updated meta tags

--- a/src/styles/DeveloperInfo.css
+++ b/src/styles/DeveloperInfo.css
@@ -36,6 +36,9 @@
 #developer-info {
     padding: 10% 10%;
 }
+#developer-info a { 
+    text-decoration: underline;
+}
 }
 
 /* Old Mobile Phones Wide Screens */
